@@ -1,3 +1,8 @@
+2014-08-19  Yaakov Selkowitz  <yselkowi@redhat.com>
+
+	* config/i386/cygwin-stdint.h: Throughout, make type
+	definitions dependent on target architecture, not host.
+
 2014-08-19  David Malcolm  <dmalcolm@redhat.com>
 
 	* rtl.h (PREV_INSN): Convert to an inline function.  Strengthen
